[package]
name = "wee-rl"
version = "1.0.0"
authors = ["Katsu Kawakami <kkawa1570@gmail.com>"]
description = "Rustyline, a readline implementation based on Antirez's Linenoise"
documentation = "http://docs.rs/wee-rl"
repository = "https://github.com/jblondin/rustyline"
readme = "README.md"
keywords = ["readline"]
license = "MIT"
categories = ["command-line-interface"]

[dependencies]
libc = "0.2.7"
log = "0.3"
unicode-width = "0.1.3"
unicode-segmentation = "1.0"
encode_unicode = "0.1.3"

[target.'cfg(unix)'.dependencies]
nix = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[dev-dependencies]
tempdir = "0.3.4"
